fix z-index

--- a/components/modal/Modal.scss
+++ b/components/modal/Modal.scss
@@ -26,7 +26,7 @@ $border-color: #e5e5e5;
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  z-index: 100;
+  z-index: 104;
   pointer-events: none;
   opacity: 0;
   transition: opacity 0.5s ease;
